force-app/main/default/objects/Public_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dreamforce</fullName>
            </value>
            <value>
                <fullName>Connections</fullName>
            </value>
            <value>
                <fullName>World Tour</fullName>
            </value>
            <value>
                <fullName>Lightning Essentials</fullName>
            </value>
            <value>
                <fullName>Boot Camp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>