force-app/main/default/objects/Public_Event__c/fields/Venue_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Venue_Address_2__c</fullName>
    <label>Venue Address #2</label>
    <type>TextArea</type>
</CustomField>