force-app/main/default/objects/Public_Event__c/fields/Venue_Address__c.field-meta.xml
<CustomField>
    <fullName>Venue_Address__c</fullName>
    <label>Venue Address</label>
    <type>TextArea</type>
</CustomField>